# url_shortener

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  stats.rs  urls.rs
migration/src/: lib.rs  m20230925_124006_create_stats_table.rs
src/: data.rs  handler.rs  main.rs  model.rs
